--- a/models/header.html
+++ b/models/header.html
@@ -18,19 +18,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="../daniela/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/novedades.html">Novedades</a>
+                        <a class="nav-link" href="../daniela/pages/novedades.html">Novedades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/clases.html">Clases</a>
+                        <a class="nav-link" href="../daniela/pages/clases.html">Clases</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/inscripcion.html">Inscripcion</a>
+                        <a class="nav-link" href="../daniela/pages/inscripcion.html">Inscripcion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/acerca.html">Acerca de</a>
+                        <a class="nav-link" href="../daniela/pages/acerca.html">Acerca de</a>
                     </li>
                 </ul>
             </div>
