--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="https://via.placeholder.com/1200x500" class="d-block w-100" alt="Novedad 1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Novedad 1</h5>
-                    <p>Descripciósn de la novedad 1.</p>
+                    <p>Descripció1sn de la novedad 1.</p>
                 </div>
             </div>
             <div class="carousel-item">
